# kde-ios-launch-effect

./: CMakeLists.txt  INSTALL.md  README.md  ioslauncheffect.cpp  ioslauncheffect.desktop  ioslauncheffect.h  ioslauncheffect.json  ioslauncheffect.kcfg  ioslauncheffect.kcfgc  ioslauncheffect_config.cpp  ioslauncheffect_config.h  ioslauncheffect_config.json  ioslauncheffect_config.ui  main.cpp
